recursion.lessons.recursion.square.FourSquare.scala.error
FourSquare:12: error: not found: value distance
		avance(distance);
                       ^