recursion.lessons.recursion.square.FourSquare.scala.code
override def run() {
	val angle = 90;
	val distance = 100;
	for(i<-0 until 4){
		square(angle*i);
	}
}
def square(angle:Double){
	setCap(angle);
	for(i<-0 until 4){
		avance(distance);
		droite(angle);
	}
}
